fix path default image

--- a/views/product-list.ejs
+++ b/views/product-list.ejs
@@ -90,7 +90,7 @@
         <div id="client" class="card-columns">
             <% products.forEach(function(product) { %>
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="http://www.selvertshopping.com/images/products/big/P<%= product.ccod %>.jpg" alt="" onerror="this.src='/public/image_broken.png'">
+                    <img class="card-img-top" src="http://www.selvertshopping.com/images/products/big/P<%= product.ccod %>.jpg" alt="" onerror="this.src='/public/img/image_broken.png'">
                     <div class="card-body">
                       <h5 class="card-title"><%= product.ccod %></h5>
                       <p class="card-text"><%= product.xdesc %></p>
