fix path default image

--- a/views/new-order-product.ejs
+++ b/views/new-order-product.ejs
@@ -137,7 +137,7 @@
                                         </button>
                                     </div>
                                     <div class="modal-body">
-                                        <img src="http://www.selvertshopping.com/images/products/big/P<%= products[i].ccod %>.jpg" onerror="this.src='/public/image_broken.png'">
+                                        <img src="http://www.selvertshopping.com/images/products/big/P<%= products[i].ccod %>.jpg" onerror="this.src='/public/img/image_broken.png'" alt="">
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
