gestione ricerca product-list

--- a/views/product-list.ejs
+++ b/views/product-list.ejs
@@ -30,7 +30,7 @@
                         </ul>
                     </div>
                     <div class="col-md-auto">
-                        <form action="/product-list" method="post" class="form-inline">
+                        <form action="/product-list" method="get" class="form-inline">
                             <div class="form-row align-items-center">
                                 <div class="w-10 col">
                                     <label class="sr-only" for="inlineFormCodDa">Codice prodotto da</label>
