fix gestione filtri product-list

--- a/views/product-list.ejs
+++ b/views/product-list.ejs
@@ -35,17 +35,17 @@
                                 <div class="w-10 col">
                                     <label class="sr-only" for="inlineFormCodDa">Codice prodotto da</label>
                                     <input type="number" name="ccodda" class="form-control mb-2" id="inlineFormInputCodDa"
-                                           placeholder="Codice prodotto da">
+                                           placeholder="Codice prodotto da" value="<%= ccodda %>">
                                 </div>
                                 <div class="w-10 col">
                                     <label class="sr-only" for="inlineFormCodA">A</label>
                                     <input type="number" name="ccoda" class="form-control mb-2" id="inlineFormInputCodA"
-                                           placeholder="Codice prodotto a">
+                                           placeholder="Codice prodotto a" value="<%= ccoda %>">
                                 </div>
                                 <div class="w-10 col">
                                     <label class="sr-only" for="inlineFormXprod">A</label>
                                     <input type="text" name="xprod" class="form-control mb-2" id="inlineFormInputXprod"
-                                           placeholder="Descrizione prodotto">
+                                           placeholder="Descrizione prodotto"  value="<%= xprod %>">
                                 </div>
                                 <div class="w-10 col">
                                     <select class=" form-control custom-select mb-2" name="sven">
