fix disabled icon

--- a/views/new-order-product.ejs
+++ b/views/new-order-product.ejs
@@ -137,7 +137,7 @@
                                         </button>
                                     </div>
                                     <div class="modal-body">
-                                        <img src="http://www.selvertshopping.com/images/products/big/P<%= products[i].ccod %>.jpg" onerror="document.getElementById('icon<%= products[i].ccod %>').innerHTML='&#xe3ad';document.getElementById("button<%= products[i].ccod %>").disabled=true" alt="">
+                                        <img src="http://www.selvertshopping.com/images/products/big/P<%= products[i].ccod %>.jpg" onerror="document.getElementById('icon<%= products[i].ccod %>').innerHTML='&#xe3ad';document.getElementById('button<%= products[i].ccod %>').disabled=true" alt="">
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
